--- a/templates/tmpl_list.html
+++ b/templates/tmpl_list.html
@@ -62,11 +62,13 @@ wt_directory HTML Template for list view
 	###WTDIRECTORY_FILTER_ABC###
 	###WTDIRECTORY_PAGEBROWSER###
 	<ul class="wtdirectory_list wtdirectory_list_wrap">
-		<!-- ###CONTENT### --><!-- ###ITEM### -->
+		<!-- ###CONTENT### -->
+		<!-- ###ITEM### -->
 			<li>
 				###WTDIRECTORY_SPECIAL_ALL###
 			</li>
-		<!-- ###ITEM### --><!-- ###CONTENT### -->
+		<!-- ###ITEM### -->
+		<!-- ###CONTENT### -->
 	</ul>
 	###WTDIRECTORY_FILTER_NORESULTS###
 <!-- ###WTDIRECTORY_LIST### end -->
