--- a/templates/tmpl_list.html
+++ b/templates/tmpl_list.html
@@ -5,6 +5,7 @@ wt_directory HTML Template for list view
 	###WTDIRECTORY_FILTER_ABC###				Show ABC list to filter
 	###WTDIRECTORY_FILTER_SEARCH###				Includes search fields
 	###WTDIRECTORY_FILTER_CAT###				Includes category dropdown field
+	###WTDIRECTORY_FILTER_RADIALSEARCH###		Includes ZIP and Radial Search fields (need rggooglemap)
 	###WTDIRECTORY_FILTER_NORESULTS###			No result message, if there is no result
 	###WTDIRECTORY_PAGEBROWSER###				Shows pagebrowser
 	---------------------------------------------------------------------------------------------------
@@ -59,6 +60,7 @@ wt_directory HTML Template for list view
 <!-- ###WTDIRECTORY_LIST### begin -->
 	###WTDIRECTORY_FILTER_SEARCH###
 	###WTDIRECTORY_FILTER_CAT###
+	###WTDIRECTORY_FILTER_RADIALSEARCH###
 	###WTDIRECTORY_FILTER_ABC###
 	###WTDIRECTORY_PAGEBROWSER###
 	<ul class="wtdirectory_list wtdirectory_list_wrap">
