--- a/templates/tmpl_list.html
+++ b/templates/tmpl_list.html
@@ -36,8 +36,9 @@ wt_directory HTML Template for list view
 	###WTDIRECTORY_FAX###						fax
 	###WTDIRECTORY_DESCRIPTION###				description
 	###WTDIRECTORY_ADDRESSGROUP###				addressgroup (returns all addressgroups an address belongs to)
-	###WTDIRECTORY_TT_ADDRESS_GROUP_TITLE###	tt_address_group_title (returns the current addressgroup titel)
-	
+	###WTDIRECTORY_TT_ADDRESS_GROUP_ID###		tt_address_group_uid (returns the first addressgroup uid)
+	###WTDIRECTORY_TT_ADDRESS_GROUP_TITLE###	tt_address_group_title (returns the first addressgroup title)
+
 	###WTDIRECTORY_SPECIAL_ALL###				Marker with all needed fields (see tmpl_markerall.html)
 	###WTDIRECTORY_SPECIAL_DETAILLINK_LABEL###	Linktext ("more...")
 	###WTDIRECTORY_SPECIAL_DETAILLINK###		Subpartlink ("<a href="[currentPageWithDetails]">[content]</a>") (e.g.: <!-- ###WTDIRECTORY_SPECIAL_DETAILLINK### -->more<!-- ###WTDIRECTORY_SPECIAL_DETAILLINK### -->)
@@ -50,7 +51,7 @@ wt_directory HTML Template for list view
 	---------------------------------------------------------------------------------------------------
 	###WTDIRECTORY_YOURFIELD###					If you have added your own fields to tt_address, you can use markers like this
 
-	
+
 	GLOBAL MARKERS:
 	Displaying any value from pi1/locallang.xml:		###WTDIRECTORY_LL_YOURFIELD### (Could be filled via locallang.xml or typoscript - see manual for details)
 	Displaying any value from typoscript:				###WTDIRECTORY_TS_YOURFIELD### (Could be filled via typoscript - see manual for details)
