tt_news: "Available Items" for contact can be limited now to certain pid's by Page-TS (use TCEFORM.tt_news.tx_wtdirectory_author.PAGE_TSCONFIG_ID or PAGE_TSCONFIG_IDLIST), tt_news: multiple contacts can be assigned now (0..1000, backwards compatible), list view: marker ###WTDIRECTORY_COUNTER### for address counter number (the latter both features suggested by Bernd Wilke in #30092)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/wt_directory/trunk@61277 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/templates/tmpl_list.html
+++ b/templates/tmpl_list.html
@@ -45,9 +45,10 @@ wt_directory HTML Template for list view
 	###WTDIRECTORY_VCARD_LINK###				Subpartlink ("<a href="[currentPageWithVcard]">[content]</a>") (e.g.: <!-- ###WTDIRECTORY_VCARD_LINK### -->more<!-- ###WTDIRECTORY_VCARD_LINK### -->)
 	###WTDIRECTORY_POWERMAIL_LINK###			Subpartlink ("<a href="[PageWithPowermail]">[content]</a>") (e.g.: <!-- ###WTDIRECTORY_POWERMAIL_LINK### -->more<!-- ###WTDIRECTORY_POWERMAIL_LINK### -->)
 	###WTDIRECTORY_GOOGLEMAP_LINK###			Subpartlink ("<a href="[PageWithGooglemaps]">[content]</a>") (e.g.: <!-- ###WTDIRECTORY_GOOGLEMAP_LINK### -->show<!-- ###WTDIRECTORY_GOOGLEMAP_LINK### -->) (only enabled if rggooglemap is installed)
-    ###WTDIRECTORY_POWERMAIL_ICON###			Icon from constants
-    ###WTDIRECTORY_VCARD_ICON###				Icon from constants
-    ###WTDIRECTORY_ALTERNATE###					Alternate class (odd or even)
+	###WTDIRECTORY_POWERMAIL_ICON###			Icon from constants
+	###WTDIRECTORY_VCARD_ICON###				Icon from constants
+	###WTDIRECTORY_ALTERNATE###				Alternate class (odd or even)
+	###WTDIRECTORY_COUNTER###				Item counter number
 	---------------------------------------------------------------------------------------------------
 	###WTDIRECTORY_YOURFIELD###					If you have added your own fields to tt_address, you can use markers like this
 
